# DirSync

./: .clang-format  CMakeLists.txt  makefile  notes.txt  sscript.sh
cmake/: ClangTidy.cmake
inc/: common.hpp  comp.hpp  comp1.hpp  comp2.hpp  file_sys_util.hpp  sockets_util.hpp
src/: CMakeLists.txt  client.cpp  common.cpp  comp.cpp  comp1.cpp  comp1_main.cpp  comp2.cpp  comp2_main.cpp  file_sys_util.cpp  server.cpp  sockets_util.cpp
src/comp1/: CMakeLists.txt  comp1.cpp  comp1_main.cpp
src/comp1/inc/: comp1.hpp
src/comp2/: CMakeLists.txt  comp2.cpp  comp2_main.cpp
src/comp2/inc/: comp2.hpp
src/inc/: common.hpp  comp.hpp  file_state_file.hpp  file_sys_util.hpp  log_file.hpp  sockets_util.hpp
test/: CMakeLists.txt  map_test.cpp  unit_tests.cpp
